# trove

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: binaries.yml  ci.yml  demo.yml  pages.yml  publish.yml
docs/: agents.md  demo.tape  index.md  usage.md
packaging/: nps_entry.py  trove_entry.py
src/nps/: __init__.py  aria2.py  catalog.py  cli.py  config.py  download.py  models.py
src/nps/tui/: __init__.py  app.py  app.tcss
src/trovenps/: __main__.py  catalog.py  download.py  models.py  monitoring.py  observability.py  progress.py
src/trovenps/tui/: app.tcss
tests/: test_aria2.py  test_catalog.py  test_cli.py  test_config.py  test_models.py  test_tui.py
